--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
@@ -38,6 +40,7 @@
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
+    "@cspell/eslint-plugin": "^8.17.5",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
@@ -45,20 +48,38 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-prettier": "^5.2.5",
     "jest": "^29.5.0",
-    "prettier": "^3.0.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.7.3"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix",
+      "pnpm spellcheck"
+    ],
+    "src/**/*.css": [
+      "prettier --write",
+      "pnpm spellcheck"
+    ],
+    "./**/*.md": [
+      "prettier --write",
+      "pnpm spellcheck"
+    ]
   },
   "jest": {
     "moduleFileExtensions": [
